...
                                    fontSize: 16,
                                  ),
                                ),
                                Tooltip(
                                  message: "Add new question entry",
                                  child: ElevatedButton(
                                    key: const Key("addQnButton"),
                                    style: ElevatedButton.styleFrom(
                                        primary: Colors.deepPurple,
                                        side: const BorderSide(
                                          width: 1.0,
                                          color: Colors.black,
                                        )),
...
            return const CircularProgressIndicator();
          case ConnectionState.active:
          case ConnectionState.done:
            List<Widget> cardList = _generateCards(snapshot.data!.docs);
            return cardList.isEmpty
                ? const Center(
                    child: Text('You have no questions...'),
                  )
                : GridView.count(
                    physics: const ScrollPhysics(),
                    crossAxisCount: currentScreenWidth < 560
                        ? 2
                        : currentScreenWidth < 1060
...
                    // Delete button
                    const SizedBox(
                      width: 20.0,
                    ),
                    TextButton(
                      child: const Text(
                        "Delete",
                        style: TextStyle(
                          color: Colors.deepPurple,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                      onPressed: () async {
...
                      },
                    ),
                    const Spacer(),
                    // Move to view question page
                    TextButton(
                      child: const Text(
                        "View",
                        style: TextStyle(
                          color: Colors.deepPurple,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                      onPressed: () {
...
