...
    final currentScreenHeight = MediaQuery.of(context).size.height;

    return Scaffold(
      backgroundColor: const Color.fromARGB(255, 242, 233, 248),
      appBar: AppBar(
        backgroundColor: Colors.deepPurple,
        title: const Text("Edit Question"),
        leading: BackButton(onPressed: () {
          Navigator.pushReplacementNamed(context, "/questions");
        }),
      ),
      body: SingleChildScrollView(
        physics: const ClampingScrollPhysics(),
...
                      borderRadius: BorderRadius.circular(12),
                      border: Border.all(),
                    ),
                    child: Padding(
                      padding: const EdgeInsets.only(left: 10.0),
                      child: TextField(
                        key: const Key("editQnTF"),
                        enabled: false,
                        controller: questionController,
                        keyboardType: TextInputType.multiline,
                        maxLines: null,
                        decoration: const InputDecoration(
                          contentPadding: EdgeInsets.symmetric(vertical: 30),
...
